--- a/CRUD/CRUD/CRUD.csproj
+++ b/CRUD/CRUD/CRUD.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7C0ADE9D-313B-432C-AFED-86D9201E2EAA}</ProjectGuid>
+    <ProjectGuid>{7B68323A-96EC-4AFC-9103-D52531AB6E49}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>CRUD</RootNamespace>
     <AssemblyName>CRUD</AssemblyName>
@@ -108,6 +108,12 @@
     <Compile Include="Consultar_alunos.designer.cs">
       <DependentUpon>Consultar_alunos.cs</DependentUpon>
     </Compile>
+    <Compile Include="consultar_turma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="consultar_turma.designer.cs">
+      <DependentUpon>consultar_turma.cs</DependentUpon>
+    </Compile>
     <Compile Include="Consulta_aluno.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +144,18 @@
     <Compile Include="Consulta_Print.designer.cs">
       <DependentUpon>Consulta_Print.cs</DependentUpon>
     </Compile>
+    <Compile Include="consulta_turmaexp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="consulta_turmaexp.designer.cs">
+      <DependentUpon>consulta_turmaexp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="criar_turma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="criar_turma.designer.cs">
+      <DependentUpon>criar_turma.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +185,9 @@
     <EmbeddedResource Include="Consultar_alunos.resx">
       <DependentUpon>Consultar_alunos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="consultar_turma.resx">
+      <DependentUpon>consultar_turma.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Consulta_aluno.resx">
       <DependentUpon>Consulta_aluno.cs</DependentUpon>
     </EmbeddedResource>
@@ -181,6 +202,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Consulta_Print.resx">
       <DependentUpon>Consulta_Print.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="consulta_turmaexp.resx">
+      <DependentUpon>consulta_turmaexp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="criar_turma.resx">
+      <DependentUpon>criar_turma.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -219,28 +246,40 @@
     <None Include="Resources\Logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Design sem nome.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\botao_adicionar_brilhante.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\Botao_adicionar.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Botao_consulta_bilhante.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Botao_consulta.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\LogoImprimir.png" />
+    <None Include="Resources\Botao_consulta_bilhante.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\botao_adicionar_brilhante.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\botao_criar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\botao_consulta1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\CameraIcon2.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\CameraIcon2Brilante.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Design sem nome.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LogoImprimir.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\botao_consulta_brilhante.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\botao_criar_brilhante.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
